Fixing Tobias' submodule to work with the upstream repo, but it would be sort of nice if he removed it and changed his code to access $GIT_ROOT/corpus.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "corpus"]
 	path = corpus
-	url = git@github.com:sixtyfive/arabicCorpus.git
+  url = git@github.com:Islamicate-DH/arabicCorpus.git
+[submodule "wenzel_tobias_arabiccorpus"]
+  path = wenzel_tobias/arabicCorpus
+  url = git@github.com:Islamicate-DH/arabicCorpus.git
