--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "corpora/altafsir_com_corpus"]
 	path = corpora/altafsir_com_corpus
 	url = git@github.com:sixtyfive/altafsir_com_corpus.git
+[submodule "corpora/newspaper_archive"]
+	path = corpora/newspaper_archive
+	url = https://github.com/tobiasw225/newspaper_archive.git
+[submodule "newspaper_archive"]
+	path = newspaper_archive
+	url = https://github.com/tobiasw225/newspaper_archive.git
