--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = git@github.com:sixtyfive/altafsir_com_corpus.git
 [submodule "corpora/newspaper_archive"]
 	path = corpora/newspaper_archive
-	url = https://github.com/tobiasw225/newspaper_archive.git
+	url = git@github.com:tobiasw225/newspaper_archive.git 
 [submodule "newspaper_archive"]
 	path = newspaper_archive
 	url = https://github.com/tobiasw225/newspaper_archive.git
